@@ -1,3 +1,13 @@
+2003-09-23  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+        * src/httpd.c (cyg_httpd_server): Removed unused variable.
+        * doc/httpd.sgml: Updated documentation for previous change.
+
+2003-09-22  Eric Doenges  <Eric.Doenges@DynaPel.com>
+	
+        * include/httpd.h: changed prototype of cyg_httpd_send_html and
+        cyg_httpd_send_data to match implementation.
+
 2003-06-09  Nick Garnett  <nickg@balti.calivar.com>
 
 	* src/httpd.c: Fixed a problem with closing the client socket --
